# 3yee

./: .gitignore  .gitmodules  3yee.html  CMakeLists.txt  LICENSE  README.md  build-emscripten.sh  defer.h  fragment.glsl  main.cpp  resource.h  shader.cpp  shader.h  vertex.glsl
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt
shaders/: axes.frag  axes.vert  surface.frag  surface.vert
src/: axes.cpp  axes.h  camera.cpp  camera.h  game.h  glm.h  input.h  main.cpp  object.h  optref.h  renderer.cpp  renderer.h  resource.h  shader.cpp  shader.h  surface.cpp  surface.h  texture.cpp  texture.h
stb-image/: CMakeLists.txt
